# nes-emulator-cpp

./: .gitignore  Bus.cpp  Bus.h  CMakeLists.txt  CMakePresets.json  Cpu.cpp  Cpu.h  Emulator.cpp  Emulator.h  README.MD  README.md  main.cpp  vcpkg.json
src/: Bus.cpp  Bus.h  Cartridge.cpp  Cartridge.h  Cpu.cpp  Cpu.h  Emulator.cpp  Emulator.h  Mapper000.cpp  main.cpp
src/app/: NesApp.cpp  NesApp.h  Window.cpp  Window.h  main.cpp
src/core/: Bus.cpp  Bus.h  Cartridge.cpp  Controller.cpp  Controller.h  Emulator.cpp  Emulator.h
src/core/cpu/: Cpu.h  Cpu_Step.cpp  Opcodes.h
src/core/mappers/: Mapper.h  Mapper000.h
src/core/ppu/: Ppu.cpp  Ppu.h  Ppu_Addresses.h
src/cpu/: Cpu.cpp  Cpu.h
src/mappers/: Mapper.cpp
src/ppu/: Ppu.cpp  Ppu.h  Ppu_Addresses.h
tests/: Bus_tests.cpp  Cartridge_tests.cpp  Controller_tests.cpp  Cpu_tests.cpp  Emulator_tests.cpp  Mapper000_tests.cpp  Ppu_tests.cpp  TestBus.cpp  TestBus.h  TestRom.cpp  TestRom.h  adc_tests.cpp  addressing_mode_tests.cpp  and_tests.cpp  asl_tests.cpp  bit_tests.cpp  branch_jump_tests.cpp  compare_tests.cpp  dec_tests.cpp  eor_tests.cpp  flag_instruction_tests.cpp  inc_tests.cpp  lda_tests.cpp  ldx_tests.cpp  ldy_tests.cpp  lsr_tests.cpp  nop_tests.cpp  ora_tests.cpp  register_increment_tests.cpp  register_transfer_tests.cpp  rol_tests.cpp  ror_tests.cpp  sbc_tests.cpp  shift_tests.cpp  sta_tests.cpp  stack_tests.cpp  stx_tests.cpp  sty_tests.cpp  test_nestest.cpp
tests/cpu/: Cpu_tests.cpp  addressing_mode_tests.cpp
tests/cpu/opcodes/: adc_tests.cpp  and_tests.cpp  asl_tests.cpp  bit_tests.cpp  branch_jump_tests.cpp  compare_tests.cpp  dec_tests.cpp  eor_tests.cpp  flag_instruction_tests.cpp  inc_tests.cpp  lda_tests.cpp  ldx_tests.cpp  ldy_tests.cpp  lsr_tests.cpp  nop_tests.cpp  ora_tests.cpp  register_increment_tests.cpp  register_transfer_tests.cpp  rol_tests.cpp  ror_tests.cpp  sbc_tests.cpp  sta_tests.cpp  stack_tests.cpp  stx_tests.cpp  sty_tests.cpp
tests/mappers/: Mapper000_tests.cpp
tests/ppu/: Ppu_tests.cpp
